2020-05-28  Tobias Brox <t-caldav@tobixen.no>
	* caldav/lib/namespace.py - The http://apple.com/ns/ical/ namespace should not be passed in every request
	* caldav/objects.py - bugfix, URLs should be quoted, and not contain '@' etc.  That ical namespace for calendar color should be imported.  refactoring, the new search method can replace quite some duplicated code.
	* docs/source/index.rst - comment on calendar-color and calendar-order, non-standard extentions supported by many server implementations.  Add a section for objectives/scope of the library.
	* tests/compatibility_issues.py - should explicitly tell that calendarcolor and calendarorder should be tessted.
	* tests/conf.py - it should be possible to disable xandikos/radicale testing without specifying server parameters in conf_private.py
	* tests/conf_private.py.EXAMPLE - try to list up all flags
	* tests/test_caldav.py - fix to support upstream changes in radicale that breaks the radicale server creation, make most of the duplication test skipable (due to bedeworks), tests for calendar color and order

2020-05-20  Tobias Brox <t-caldav@tobixen.no>
	* caldav/lib/python_utilities.py - still some more python2/python3-unicode/str/byte problem solving
	* caldav/objects.py - splitting up the date_search into three submethods, making it easier to do custom searches.  icalendar support.  Making sure all modifications through either vobject, icalendar or raw data is honored.
	* docs/source/index.rst - icalendar support
	* examples/basic_usage_examples.py - vobject support
	* setup.py - icalendar is now a test requirement (and also an optional requirement for library users)
	* tests/test_caldav.py - the icalendar instantiation should be exercises

2020-05-19  Tobias Brox <t-caldav@tobixen.no>
	* caldav/davclient.py - save the auth object, to avoid lots of failed autentications on servers not handling digestauth.
	* caldav/objects.py - bugfix, Event class should not be used for Todo items, etc